--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.6.0",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "photoswipe": "^5.4.4",
@@ -31,6 +33,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-photoswipe-gallery": "^3.0.2",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
